Integrate Depth Anything 3 metric depth for viewer
Added a DA3 metric depth estimator module and integrated it into the Splatfacto model for optional depth map computation from rendered RGB images. Updated the viewer render state machine to allow selection of different depth outputs, including DA3, for visualization. Added DA3 as an optional dependency in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,12 @@ dependencies = [
 
 [project.optional-dependencies]
 
+# Depth Anything 3 (optional, viewer-only depth)
+da3 = [
+    "huggingface_hub>=0.20.0",
+    "depth-anything-3 @ git+https://github.com/ByteDance-Seed/Depth-Anything-3.git",
+]
+
 # Generative related dependencies
 gen = [
     "diffusers==0.16.1",
